# speedrun-workshop-anchor

./: Anchor.toml  LICENSE  README.md  package.json
programs/bagbox/: Cargo.toml
programs/bagbox-session/: Cargo.toml
programs/bagbox-session/src/: lib.rs
programs/bagbox/src/: lib.rs
scripts/: BagboxSession.cs
tests/bagbox/: bagbox.spec.ts
tests/bagbox-session/: bagbox-session.spec.ts
