[package]
name = "bagbox-session"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bagbox_session"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
blake3 = "=1.3.1"
gpl-session = { version = "1.0.0", features = ["no-entrypoint"] }
